# ITSERR-RESILIENCE-Project

./: .gitignore  LICENSE  PROMPT_documentation_audit.md  README.md  TNA_FELLOWSHIP_HUB.md  mkdocs.yml
03_prototype/: .env.example  DEV_ENVIRONMENT_SETUP_PROMPT.md  PROMPT_alto_extraction_SUPERSEDED.md  README.md  pyproject.toml
03_prototype/architecture/: epistemic_indicators.md  memory_architecture.md  system_design.md  tool_patterns.md
03_prototype/src/itserr_agent/: __init__.py  cli.py  demo.py
03_prototype/src/itserr_agent/core/: __init__.py  agent.py  config.py
03_prototype/src/itserr_agent/epistemic/: __init__.py  classifier.py  indicators.py
03_prototype/src/itserr_agent/integrations/: __init__.py  gnorm.py
03_prototype/src/itserr_agent/memory/: __init__.py  narrative.py  streams.py
03_prototype/src/itserr_agent/tools/: __init__.py  base.py  registry.py
03_prototype/stockel_annotation/: .gitignore  CHAPTER_SELECTION.md  PROGRESS.md  README.md
03_prototype/stockel_annotation/data/: abbreviation_dictionary_notes.md
03_prototype/stockel_annotation/data/cleaned/: annotationes_pp1-5.txt  annotationes_pp11-15.txt  annotationes_pp16-20.txt  annotationes_pp21-25.txt  annotationes_pp26-30.txt  annotationes_pp31-35.txt  annotationes_pp36-40.txt  annotationes_pp41-45.txt  annotationes_pp46-50.txt  annotationes_pp51-55.txt  annotationes_pp56-58.txt  annotationes_pp6-10.txt
03_prototype/stockel_annotation/data/normalized/: NORMALIZATION_REPORT.md  STRUCTURAL_ANALYSIS.md  annotationes_pp1-5.txt  annotationes_pp11-15.txt  annotationes_pp16-20.txt  annotationes_pp21-25.txt  annotationes_pp26-30.txt  annotationes_pp31-35.txt  annotationes_pp36-40.txt  annotationes_pp41-45.txt  annotationes_pp46-50.txt  annotationes_pp51-55.txt  annotationes_pp56-58.txt  annotationes_pp6-10.txt
03_prototype/stockel_annotation/data/raw/: ZENODO_DOWNLOAD_INSTRUCTIONS.md
03_prototype/stockel_annotation/data/raw/allegations_all/txt/: 1.01 DE SUMMA TRINITATE ET FIDE CATHOLICA.txt  1.02 DE CONSTITUTIONIBUS.txt  1.04 DE CONSUETUDINE.txt  1.06 DE ELECTIONE ET ELECTI POTESTATE.txt  1.09 DE RENUNCIATIONE.txt  1.12 DE SCRUTINIO IN ORDINE FACIENDO.txt  1.19 DE OBLIGATIS AD RATIOCINIA ORDINANDIS.txt  1.20 DE CORPORE VITIATIS ORDINANDIS VEL NON.txt  1.22 DE CLERICIS PEREGRINIS.txt  1.30 DE OFFICIO LEGATI.txt  1.32 DE OFFICIO IUDICIS.txt  1.37 DE POSTULANDO.txt  1.38 DE PROCURATORIBUS.txt  2.01 DE IUDICIIS.txt  2.02 DE FORO COMPETENTI.txt  2.04 DE MUTUIS PETITIONIBUS.txt  2.05 DE LITIS CONTESTATIONE.txt  2.06 UT LITE NON CONTESTATA NON PROCEDATUR AD TESTIUM RECEPTIONEM VEL AD SENTENTIAM DIFFINITIVAM.txt  2.08 DE DILATIONIBUS.txt  2.09 DE FERIIS.txt  2.25 DE EXCEPTIONIBUS.txt  (+40 more)
03_prototype/stockel_annotation/data/raw/allegations_inception/: exportedproject.json
03_prototype/stockel_annotation/data/raw/extra_allegation_inception/: exportedproject.json
03_prototype/stockel_annotation/results/: experiments.md  zenodo_dataset_analysis.md
03_prototype/stockel_annotation/scripts/: GNORM_PIPELINE_ANALYSIS.md  build_corpus_json.py  cas_to_bioes.py  extract_alto.py  normalize_text.py  ocr_processor.py  zero_shot_crf_experiment.py
03_prototype/stockel_annotation/tools/inception/: .gitignore  ANNOTATION_SETUP.md  setup_inception.sh
03_prototype/tests/: __init__.py  conftest.py  test_build_corpus_json.py  test_cas_to_bioes.py  test_epistemic.py  test_extract_alto.py  test_gnorm.py  test_integration.py  test_normalize_text.py  test_ocr_processor.py  test_reflection.py  test_streams.py  test_zero_shot_crf.py
(+1733 files in other folders)
