[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itserr-agent"
version = "0.1.0"
description = "Ethically-grounded AI agent for religious studies research - ITSERR WP5 prototype"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ITSERR WP5 Team" }
]
keywords = [
    "ai-agent",
    "religious-studies",
    "langchain",
    "langgraph",
    "epistemic-modesty",
    "research-assistant"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core agent framework
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",

    # Vector store for narrative memory
    "chromadb>=0.5.0",

    # Embeddings (local option)
    "sentence-transformers>=3.0.0",

    # MCP (Model Context Protocol) for tool integration
    "mcp>=1.0.0",

    # API and HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Configuration and environment
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # CLI interface
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Utilities
    "tenacity>=8.0.0",  # Retry logic
    "structlog>=24.0.0",  # Structured logging

    # XML processing (ALTO XML extraction for annotation pipeline)
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",

    # Code quality
    "ruff>=0.5.0",
    "mypy>=1.10.0",

    # Development utilities
    "ipython>=8.0.0",
    "jupyter>=1.0.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
itserr-agent = "itserr_agent.cli:main"

[project.urls]
Homepage = "https://github.com/ITSERR/resilience-project"
Documentation = "https://github.com/ITSERR/resilience-project#readme"
Repository = "https://github.com/ITSERR/resilience-project"

[tool.hatch.build.targets.wheel]
packages = ["src/itserr_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["itserr_agent"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/itserr_agent --cov-report=term-missing"

[tool.coverage.run]
source = ["src/itserr_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
